2007-02-12  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/libsteticui.mdp, libsteticui/Makefile.am,
	  libstetic/Makefile.am, stetic/Makefile.am: Flush.
	* libsteticui/WidgetDesigner.cs: When disposing the active project,
	  reset the active project property.
	* libstetic/GeneratorContext.cs: Added a code generation option for
	  specifying the Gettext class to use.

2007-02-08  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/libsteticui.mdp, libsteticui/Makefile.am: Fixed
	  references.
	* configure.in: Added missing modules.

2007-02-08  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/Makefile.am, libstetic/Makefile.am, stetic/Makefile.am:
	  Distcheck fixes.
	* libstetic/GeneratorContext.cs: Don't generate gettext for empty
	  strings.
	* configure.in: Add missing package.
	* stetic/stetic.mdp, libsteticui/libsteticui.mdp,
	  libstetic/libstetic.mdp, stetic.mds: Added MonoDevelop projects.

2007-02-05  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/WidgetEditSession.cs: Clone the widget library list from
	  the master project since the list is cleared when the copy project
	  is closed.
	* libstetic/ObjectWrapper.cs, libstetic/wrapper/Button.cs,
	  libstetic/PropertyDescriptor.cs, libstetic/WidgetUtils.cs: Properly
	  generate translatable properties.

2007-02-02  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/editor/SelectImageDialog.cs,
	  libstetic/editor/StockIconSelectorItem.cs,
	  libstetic/editor/SelectIconDialog.cs, libstetic/WidgetUtils.cs,
	  libstetic/TypedClassDescriptor.cs,
	  libstetic/wrapper/pixmaps/missing.png: Looks like some themes don't
	  have icon for gtk-missing-image. Added a fallback to avoid crashes.
	* stetic/UIManager.cs: Action fixes.

2007-02-01  Lluis Sanchez Gual <lluis@novell.com> 

	* configure.in: More dependency removal.

2007-02-01  Lluis Sanchez Gual <lluis@novell.com> 

	* autogen.sh: Removed gnome-common dependency.

2007-01-31  Lluis Sanchez Gual <lluis@novell.com> 
