@@ -17,7 +17,7 @@
     <File name="./Stetic.cs" subtype="Code" buildaction="Compile" />
     <File name="./UIManager.cs" subtype="Code" buildaction="Compile" />
     <File name="./stetic-multi.glade" subtype="Code" buildaction="Nothing" />
-    <File name="./stetic.glade" subtype="Code" buildaction="Nothing" />
+    <File name="./stetic.glade" subtype="Code" buildaction="EmbedAsResource" />
     <File name="./stetic.in" subtype="Code" buildaction="Nothing" />
     <File name="./RecentFiles.cs" subtype="Code" buildaction="Compile" />
     <File name="./Makefile.am" subtype="Code" buildaction="Nothing" />
